Finished generating token
