# cmd/api/auth.go
@@ -5,17 +5,24 @@ import (
 	"encoding/hex"
 	"errors"
 	"fmt"
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 	"github.com/rijojohn85/social/internal/env"
 	"github.com/rijojohn85/social/internal/mailer"
 	"github.com/rijojohn85/social/internal/store"
+	"golang.org/x/crypto/bcrypt"
 	"net/http"
+	"time"
 )
 
 type AuthPayload struct {
 	Username string `json:"username" valid:"required,max=20"`
 	Password string `json:"password" valid:"required,max=72,min=3"`
 	Email    string `json:"email" valid:"required,email,max=255"`
+}
+type CreateTokenUserPayload struct {
+	Email    string `json:"email" valid:"required,email,max=255"`
+	Password string `json:"password" valid:"required,max=72,min=3"`
 }
 
 // RegisterUser godoc
@@ -25,7 +32,7 @@ type AuthPayload struct {
 //	@Tags			auth
 //	@Accept			json
 //	@Produce		json
-//	@Param			payload	body		AuthPayload true	"Auth payload"
+//	@Param			payload	body		AuthPayload	true	"Auth payload"
 //	@Success		201		{object}	store.User
 //	@Failure		400		{object}	error
 //	@Failure		404		{object}	error
@@ -104,6 +111,67 @@ func (app *application) registerUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	if err := app.jsonResponse(w, http.StatusCreated, plainToken); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
+
+// Create Token godoc
+//
+//	@Summary		CreateToken
+//	@Description	Create token
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		CreateTokenUserPayload	true	"CreateUserToken payload"
+//	@Success		200		{object}	string					"Token"
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/authentication/token [POST]
+func (app *application) createTokenHandler(w http.ResponseWriter, r *http.Request) {
+	// parse payload and validate
+	var payload CreateTokenUserPayload
+
+	err := readJson(w, r, &payload)
+	if err != nil {
+		app.badRequestError(w, r, err)
+		return
+	}
+	err = Validate.Struct(payload)
+	if err != nil {
+		app.badRequestError(w, r, err)
+	}
+	//fetch the user (check if the user exists) from payload
+	user, err := app.store.Users.GetUserByEmail(r.Context(), payload.Email)
+	if err != nil {
+		app.unauthorizedError(w, r, err)
+		return
+	}
+	// check credentials
+	err = bcrypt.CompareHashAndPassword(user.Password.Hash, []byte(payload.Password))
+	if err != nil {
+		app.unauthorizedError(w, r, errors.New("invalid credentials"))
+		return
+	}
+
+	// generate token -> add claims
+	claim := jwt.MapClaims{
+		"sub": user.ID,
+		"exp": time.Now().Add(app.config.auth.token.exp).Unix(),
+		"iat": time.Now().Unix(),
+		"nbf": time.Now().Unix(),
+		"iss": app.config.auth.token.aud,
+		"aud": app.config.auth.token.aud,
+	}
+	token, err := app.authenticator.GenerateToken(claim)
+	if err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+	// send to client
+	if err := app.jsonResponse(w, http.StatusCreated, token); err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
